InternexDev_Sandbox/src/objects/Daily_Interest_Accrual__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <formula>CASESAFEID(Monthly_Interest_Application__r.Client_Account__c)</formula>
        <label>Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount__c</fullName>
        <formula>IF(Business_Transaction_Date__c &gt;= Date__c ,Funding_Limit__c *  Commitment__c,0)</formula>
        <inlineHelpText>Min Utilization (%) * Client Funding Limit</inlineHelpText>
        <label>Min Utilization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Fee__c</fullName>
        <formula>IF(FIU_Outstanding__c &lt; 0, Funding_Limit__c ,IF(FIU_Outstanding__c &lt;= MinCommitmentAmount__c,Funding_Limit__c -  Commitment_Amount__c,IF(FIU_Outstanding__c &gt; Funding_Limit__c,0,IF(FIU_Outstanding__c &gt; 	MinCommitmentAmount__c,Funding_Limit__c - FIU_Outstanding__c ,0))))</formula>
        <label>Unused Line Amount for UL fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Min Utilization (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commitment_fee_acc__c</fullName>
        <formula>IF(Business_Transaction_Date__c &gt;= Date__c,ROUND((Funding_Limit__c-Prin_for_intt__c)*Commitment_rate__c*(1/(No_of_Days__c*100)),6),0)</formula>
        <label>UL Fee Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_rate__c</fullName>
        <label>Unused Line Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_IUF_Retained__c</fullName>
        <description>Used for storing the value in IUF table. Not using any where and its keep changing its value which is correct.</description>
        <formula>Monthly_Interest_Application__r.Client_Account__r.IUF_Reserve_Retained__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current IUF Retained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Funding__c</fullName>
        <label>Eligible For Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIU_Outstanding_Formula__c</fullName>
        <formula>IF( Business_Transaction_Date__c &gt;=  Date__c , FIU_Outstanding__c ,0)</formula>
        <label>FIU Outstanding ( Derived )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIU_Outstanding__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_for_Last_Day_of_the_Month__c</fullName>
        <formula>IF( Date__c == Last_Day_of_the_Month__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag for Last Day of the Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Limit__c</fullName>
        <label>Funding Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Availability__c</fullName>
        <label>Gross Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Amount__c</fullName>
        <label>Ineligibles Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Base_Rate__c</fullName>
        <label>Interest Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Base__c</fullName>
        <label>Interest Base</label>
        <picklist>
            <picklistValues>
                <fullName>Citi Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internex base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS Prime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Applied__c</fullName>
        <formula>Interest_Base_Rate__c +  Interest_Spread__c</formula>
        <label>Interest Rate Applied</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Spread__c</fullName>
        <label>Interest Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <formula>ROUND(( Prin_for_intt__c *  Interest_Rate_Applied__c*100 *(1/(No_of_Days__c* 100))),6)</formula>
        <label>Interest Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_the_Month__c</fullName>
        <formula>DATE( 
CASE(MONTH(Business_Transaction_Date__c), 12, YEAR(Business_Transaction_Date__c) + 1, YEAR(Business_Transaction_Date__c)), 
CASE(MONTH(Business_Transaction_Date__c), 12, 1, MONTH(Business_Transaction_Date__c) +1), 
1 
) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>30 / 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTUAL / 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTUAL / ACTUAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinCommitmentAmount__c</fullName>
        <description>Getting Updated from Interest Calculation batch</description>
        <label>Min Utilization Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_Application__c</fullName>
        <label>Monthly Interest Application</label>
        <referenceTo>Monthly_Interest_Application__c</referenceTo>
        <relationshipLabel>Daily Interest Accruals</relationshipLabel>
        <relationshipName>Daily_Interest_Accruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest__c</fullName>
        <formula>Monthly_Interest_Application__r.Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Availability__c</fullName>
        <label>Net Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>IF(ISPICKVAL( Method__c, &apos;ACTUAL / 360&apos;),360,IF(ISPICKVAL(Method__c, &apos;ACTUAL / ACTUAL&apos;),IF(
OR( 
  MOD( YEAR( Date__c ), 400 ) = 0, 
  AND( 
   MOD( YEAR( Date__c ), 4 ) = 0,
    MOD( YEAR( Date__c ), 100 ) != 0
  )
),366,365),360))</formula>
        <label>No of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_performing_asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prin_for_intt__c</fullName>
        <formula>MAX( FIU_Outstanding_Formula__c ,Commitment_Amount__c)</formula>
        <label>Principal for interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Daily Interest Accrual</label>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Daily Interest Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Interest Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>